--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,8 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.1'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.1'
     }
 }
 
