--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.1'
         compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.1'
+        compile group: 'commons-io', name: 'commons-io', version: '2.4'
     }
 }
 
