Adding screen to create a new game and display a welcome dialog

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,6 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-        
     }
 }
 
@@ -57,7 +56,8 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.1'
+        compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.1'
     }
 }
 
